# python-bayesian-optimization-in-action

./: .gitignore  002_gaussian_process.ipynb  003_covariance_function.ipynb  003_customization_gaussian_process.ipynb  004_policies.ipynb  005_bandit.ipynb  006_entropy_search.ipynb  007_batch_optimization.ipynb  008_constraints.ipynb  009_003_measuring_performance.ipynb  009_multifidelity.ipynb  010_01_preference_optimization-Copy1.ipynb  010_02_optimizing_preferences.ipynb  011_01_optimizing_multiple_objectives.ipynb  011_02_multi_objective_bayes_loop.ipynb  012_approximate_gaussian.ipynb  013_01_kernel.ipynb  013_02_training.ipynb  Makefile  README.md  bo.py  pyproject.toml
bo/: models.py  objectives.py  plots.py  train.py
docs/: 002_gaussian_process.md  003_covariance_function.md  003_customization_gaussian_process.md  004_policies.md  005_bandit.md  006_entropy_search.md  007_batch_optimization.md  008_constraints.md  009_003_measuring_performance.md  009_multifidelity.md  010_01_preference_optimization-Copy1.md  010_02_optimizing_preferences.md  011_01_optimizing_multiple_objectives.md  011_02_multi_objective_bayes_loop.md  012_approximate_gaussian.md  013_01_kernel.md  013_02_training.md  03_customizatin_gaussian_process.md
forrester/: ALT_EI.pth  CEI.pth  EHVI.pth  EI.pth  RANDOM.pth  UCB.pth  train_x.pth  train_y.pth
forrester_one_run/: MES.pkl  MFMES.pkl
hyperparam_tuning/: EI.pth  POI.pth  UCB.pth
