[tool.poetry]
name = "python-bayesian-optimization-in-action"
version = "0.1.0"
description = ""
authors = ["alextanhongpin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
jupyterlab-vim = "^4.1.4"
jupyterlab-code-formatter = "^3.0.2"
ipywidgets = "^8.1.5"
black = "^25.1.0"
isort = "^6.0.0"
torch = "^2.6.0"
matplotlib = "^3.10.0"
numpy = "^2.2.3"
gpytorch = "^1.14"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
